[gd_scene load_steps=14 format=2]

[ext_resource path="res://Enemies/FieryBoss.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Fiery/Boss.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 15.5 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Boss",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 16, 15.5 )

[node name="FieryBoss" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 12 )

[node name="appearance" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Boss"
frame = 2
playing = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 13 )

[node name="immobolise_timer" type="Timer" parent="."]
one_shot = true

[node name="slow_timer" type="Timer" parent="."]
one_shot = true

[node name="move_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="summon_timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="immobolise_timer" to="." method="_on_immobolise_timer_timeout"]
[connection signal="timeout" from="slow_timer" to="." method="_on_slow_timer_timeout"]
[connection signal="timeout" from="move_timer" to="." method="_on_move_timer_timeout"]
[connection signal="timeout" from="summon_timer" to="." method="_on_summon_timer_timeout"]
